--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-datatables": "^17.0.0",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
+    "datatables.net": "^1.13.8",
+    "datatables.net-dt": "^1.13.8",
+    "jquery": "^3.7.1",
+    "ngx-summernote": "^1.0.0",
+    "or": "^0.2.0",
     "rxjs": "~7.5.0",
+    "summernote": "^0.8.20",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -26,7 +35,9 @@
     "@angular-devkit/build-angular": "~13.3.3",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/datatables.net": "^1.10.28",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.29",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
